--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 /* header section */
 #header{
-    background:linear-gradient(rgba(0, 0, 0, 0.582),rgba(0, 0, 0, 0.664)), url(/img/home.jpg);
+    background:linear-gradient(rgba(0, 0, 0, 0.582),rgba(0, 0, 0, 0.664)), url('../img/home.jpg');
     background-attachment: fixed;
     background-position: top center;
     background-repeat: no-repeat;
